update dependency